--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello!</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="it-IT">
+	<head>
+		<title>Widget for Co-Authors</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	</head>
+<body>
+  <h1>Hello!</h1>
+</body>
