--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="it-IT">
+<html>
 	<head>
 		<title>Widget for Co-Authors</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<style>
+		body {
+			font-size: 16px;
+			font-family: 'Roboto';
+		      }
+			
+		#box {
+			margin: 15px;
+			padding: 5px 5px 5px 5px;
+			background: #fafafa;
+			border: 1px solid #20B2AA;
+		      }
+			
+		#titlebox {
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+			margin: 0 auto;
+			font-family: sans-serif;
+			line-height: 1.5;
+			font-weight: 300;
+			color: #fff;
+			-webkit-font-smoothing: antialiased;
+			background-color: #20B2AA;
+			   }
+			
+		#bluebox {
+			background: #4682B4;
+			color: #fff;
+			border-radius: .25em .25em .25em .25em;
+			font-family: sans-serif;
+			  }
+		
+		#blueboxbig {
+			background: #4682B4;
+			color: #fff;
+			border-radius: .25em .25em .25em .25em;
+			min-height: 25em;
+			position: relative;
+			     }
+		</style>
 	</head>
 <body>
-  <h1>Hello!</h1>
+	<div id="box">Ciao</div>
 </body>
+</html>
