--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
 		<title>Widget for Co-Authors</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<style>
+		* {
+			box-sizing: border-box;
+		   }
+		
+		.header {
+			background-color: #20B2AA;
+			color: #ffffff;
+			padding: 15px;
+			}
+			
+		.menu {
+			width: 25%;
+			float: left;
+			padding: 15px;
+			background-color: #33b5e5;
+		       }
+			
+		.menu ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			  }
+			
+		.menu li {
+			padding: 8px;
+			margin-bottom: 7px;
+			background-color: #4682B4;
+			color: #ffffff;
+			box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+			  }
+			
+		.menu li:hover {
+			background-color: #0099cc;
+			       }
+			
+		.main {
+			width: 75%;
+			float: left;
+			padding: 15px;
+		       }
+			
 		body {
 			font-size: 16px;
 			font-family: 'Roboto';
@@ -46,6 +87,17 @@
 		</style>
 	</head>
 <body>
-	<div id="box">Ciao</div>
+	<div class="header">Widget for Co-Authors</div>
+	
+	<div class="row">
+		<div class="menu">
+			<ul>
+				<li>Description</li>
+			</ul>
+		</div>
+		<div class="main">
+			The plugin add a widget and a shortcode in order to show authors of an article. It is compatible with Co-Authors Plus.
+		</div>
+	</div>
 </body>
 </html>
