--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 	<head>
 		<title>Widget for Co-Authors</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 		<style>
 		* {
 			box-sizing: border-box;
 		   }
+		
+		html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		
 		.header {
 			background-color: #20B2AA;
@@ -44,11 +47,6 @@
 			float: left;
 			padding: 15px;
 		       }
-			
-		body {
-			font-size: 16px;
-			font-family: 'Roboto';
-		      }
 			
 		#box {
 			margin: 15px;
