--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		   }
 		
 		html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+			
+		body {background-color: #EBEBEB;}
 		
 		.header {
 			background-color: #20B2AA;
@@ -17,12 +19,23 @@
 			padding: 15px;
 			}
 			
-		.menu {
-			width: 25%;
+		[class*="col-"] {
 			float: left;
 			padding: 15px;
-			background-color: #33b5e5;
-		       }
+			        }
+			
+		.col-1 {width: 8.33%;}
+		.col-2 {width: 16.66%;}
+		.col-3 {width: 25%;}
+		.col-4 {width: 33.33%;}
+		.col-5 {width: 41.66%;}
+		.col-6 {width: 50%;}
+		.col-7 {width: 58.33%;}
+		.col-8 {width: 66.66%;}
+		.col-9 {width: 75%;}
+		.col-10 {width: 83.33%;}
+		.col-11 {width: 91.66%;}
+		.col-12 {width: 100%;}
 			
 		.menu ul {
 			list-style-type: none;
@@ -88,7 +101,9 @@
 	<div class="header">Widget for Co-Authors</div>
 	
 	<div class="row">
-		<div class="menu">
+		<div class="col-2">
+		</div>
+		<div class="col-3 menu">
 			<ul>
 				<li>Description</li>
 			</ul>
