--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<li>Description</li>
 			</ul>
 		</div>
-		<div class="main">
+		<div class="col-5">
 			The plugin add a widget and a shortcode in order to show authors of an article. It is compatible with Co-Authors Plus.
 		</div>
 	</div>
