--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 			padding: 15px;
 		       }
 			
-		#box {
+		.content {
 			margin: 15px;
 			padding: 5px 5px 5px 5px;
-			background: #fafafa;
-			border: 1px solid #20B2AA;
+			background: #ffffff;
+			border: 1px solid #4F7849;
 		      }
 			
 		#titlebox {
@@ -101,7 +101,7 @@
 	<div class="header">Widget for Co-Authors</div>
 	
 	<div class="row">
-		<div class="col-2">
+		<div class="col-1">
 		</div>
 		<div class="col-3 menu">
 			<ul>
@@ -109,7 +109,9 @@
 			</ul>
 		</div>
 		<div class="col-5">
-			The plugin add a widget and a shortcode in order to show authors of an article. It is compatible with Co-Authors Plus.
+			<div class="content">
+			<p>The plugin add a widget and a shortcode in order to show authors of an article. It is compatible with Co-Authors Plus.</p>
+			</div>
 		</div>
 	</div>
 </body>
