--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 		body {background-color: #EBEBEB;}
 		
 		.header {
+			position: fixed;
 			background-color: #20B2AA;
 			color: #ffffff;
 			padding: 15px;
+			text-align: center;
 			}
 			
 		[class*="col-"] {
