--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 		body {background-color: #EBEBEB;}
 		
 		.header {
-			position: fixed;
 			background-color: #20B2AA;
 			color: #ffffff;
 			padding: 15px;
-			text-align: center;
 			}
 			
 		[class*="col-"] {
@@ -70,6 +68,12 @@
 			border: 1px solid #4F7849;
 		      }
 			
+		.footer {
+			background-color: #f1f1f1;
+			padding: 10px;
+			text-align: center;
+			}
+			
 		#titlebox {
 			position: relative;
 			overflow: hidden;
@@ -100,7 +104,7 @@
 		</style>
 	</head>
 <body>
-	<div class="header">Widget for Co-Authors</div>
+	<div class="header" align="center"><h1>Widget for Co-Authors</h1></div>
 	
 	<div class="row">
 		<div class="col-1">
@@ -137,6 +141,7 @@
 
 			</div>
 		</div>
+		<div class="footer">Ciao</div>
 	</div>
 </body>
 </html>
