--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 			</div>
 		</div>
-		<div class="footer">Ciao</div>
+		<div class="row"><div class="footer">Ciao</div></div>
 	</div>
 </body>
 </html>
