--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 				</ul>
 
 			</div>
+			<div class="footer">Ciao</div>
 		</div>
-		<div class="row"><div class="footer">Ciao</div></div>
 	</div>
 </body>
 </html>
