--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 		      }
 			
 		.footer {
-			background-color: #f1f1f1;
+			width: 100%;
+			background-color: #CEE0CC;
 			padding: 10px;
 			text-align: center;
 			}
@@ -140,7 +141,7 @@
 				</ul>
 
 			</div>
-			<div class="footer">Ciao</div>
+			<div class="footer">Project maintained by <a href="https://github.com/ulaulaman" target="github">ulaulaman</a> - Hosted on GitHub Pages - Theme by <a href="https://github.com/ulaulaman" target="github">ulaulaman</a></div>
 		</div>
 	</div>
 </body>
