--- a/index.html
+++ b/index.html
@@ -74,34 +74,6 @@
 			padding: 10px;
 			text-align: center;
 			}
-			
-		#titlebox {
-			position: relative;
-			overflow: hidden;
-			width: 100%;
-			margin: 0 auto;
-			font-family: sans-serif;
-			line-height: 1.5;
-			font-weight: 300;
-			color: #fff;
-			-webkit-font-smoothing: antialiased;
-			background-color: #20B2AA;
-			   }
-			
-		#bluebox {
-			background: #4682B4;
-			color: #fff;
-			border-radius: .25em .25em .25em .25em;
-			font-family: sans-serif;
-			  }
-		
-		#blueboxbig {
-			background: #4682B4;
-			color: #fff;
-			border-radius: .25em .25em .25em .25em;
-			min-height: 25em;
-			position: relative;
-			     }
 		</style>
 	</head>
 <body>
@@ -113,6 +85,9 @@
 		<div class="col-3 menu">
 			<ul>
 				<li>Description</li>
+				<li>Installation</li>
+				<li>Changelog</li>
+				<li><a href="https://github.com/ulaulaman/widget-for-co-authors" target="github">View project on GitHub</a></li>
 			</ul>
 		</div>
 		<div class="col-5">
