--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 		<div class="col-3 menu">
 			<ul>
-				<li><a href="../#description">Description</a></li>
+				<li><a href="../..#description">Description</a></li>
 				<li>Installation</li>
 				<li>Changelog</li>
 				<li><a href="https://github.com/ulaulaman/widget-for-co-authors" target="github"><span style="color: #ffffff;">View project on GitHub</span></a></li>
