Finish first version of plugin site

--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
 		</div>
 		<div class="col-3 menu">
 			<ul>
-				<li><a href="../..#description">Description</a></li>
-				<li>Installation</li>
-				<li>Changelog</li>
+				<li><a href="https://ulaulaman.github.io/widget-for-co-authors/#description"><span style="color: #ffffff;">Description</span></a></li>
+				<li><a href="https://ulaulaman.github.io/widget-for-co-authors/#installation"><span style="color: #ffffff;">Installation</span></a></li>
+				<li><a href="https://ulaulaman.github.io/widget-for-co-authors/#changelog"><span style="color: #ffffff;">Changelog</span></a></li>
 				<li><a href="https://github.com/ulaulaman/widget-for-co-authors" target="github"><span style="color: #ffffff;">View project on GitHub</span></a></li>
+				<li><a href="https://wordpress.org/plugins/widget-for-co-authors/" target="plugin"><span style="color: #ffffff;">View plugin on Wordpress.org</span></a></li>
 			</ul>
 		</div>
 		<div class="col-5">
@@ -116,7 +117,8 @@
 				</ul>
 
 			</div>
-			<div class="footer">Project maintained by <a href="https://github.com/ulaulaman" target="github">ulaulaman</a> - Hosted on GitHub Pages - Theme by <a href="https://github.com/ulaulaman" target="github">ulaulaman</a></div>
+			<div class="footer">Project maintained by <a href="https://github.com/ulaulaman" target="github">ulaulaman</a><br/>
+			Hosted on GitHub Pages - Theme by <a href="https://github.com/ulaulaman" target="github">ulaulaman</a></div>
 		</div>
 	</div>
 </body>
